language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_public_function.snap
---
source: language-server/src/tests/reference.rs
expression: "\npub fn wibble() {\n  wibble()\n}\n"
---
-- mod.gleam

import app.{wibble}
            ▔▔▔▔▔▔ 

fn wobble() {
  app.wibble()
      ▔▔▔▔▔▔  
}

fn other() {
  wibble()
  ▔▔▔▔▔▔  
}


-- app.gleam

pub fn wibble() {
       ▔▔▔▔▔▔    
  wibble()
  ↑▔▔▔▔▔  
}
