language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_public_type.snap
---
source: language-server/src/tests/reference.rs
expression: "\npub type Wibble { Wibble }\n\npub fn main() -> Wibble {\n  todo\n}\n"
---
-- mod.gleam

import app.{type Wibble}
                 ▔▔▔▔▔▔ 

fn wobble() -> Wibble {
               ▔▔▔▔▔▔  
  todo
}

fn other(w: app.Wibble) {
                ▔▔▔▔▔▔   
  todo
}


-- app.gleam

pub type Wibble { Wibble }
         ↑▔▔▔▔▔           

pub fn main() -> Wibble {
                 ▔▔▔▔▔▔  
  todo
}
