language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_public_type_variant.snap
---
source: language-server/src/tests/reference.rs
expression: "\npub type Wibble { Wibble }\n\npub fn main() {\n  Wibble\n}\n"
---
-- mod.gleam

import app.{Wibble}
            ▔▔▔▔▔▔ 

fn wobble() {
  app.Wibble
      ▔▔▔▔▔▔
}

fn other() {
  Wibble
  ▔▔▔▔▔▔
}


-- app.gleam

pub type Wibble { Wibble }
                  ↑▔▔▔▔▔  

pub fn main() {
  Wibble
  ▔▔▔▔▔▔
}
