language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_record_field.snap
---
source: language-server/src/tests/reference.rs
expression: "\ntype Wibble {\n  Wibble(wibble: Int)\n}\n\npub fn main() {\n  let value = Wibble(wibble: 1)\n  value.wibble\n}\n"
---
-- app.gleam

type Wibble {
  Wibble(wibble: Int)
         ▔▔▔▔▔▔      
}

pub fn main() {
  let value = Wibble(wibble: 1)
                     ▔▔▔▔▔▔    
  value.wibble
        ▔↑▔▔▔▔
}
