language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_record_field_ignored_by_constant_record_update_spread.snap
---
source: language-server/src/tests/reference.rs
expression: "\ntype Wibble {\n  Wibble(wibble: Int, wobble: Int)\n}\n\nconst base = Wibble(wibble: 1, wobble: 2)\n\nconst updated = Wibble(..base, wibble: 3)\n"
---
-- app.gleam

type Wibble {
  Wibble(wibble: Int, wobble: Int)
                      ↑▔▔▔▔▔      
}

const base = Wibble(wibble: 1, wobble: 2)
                               ▔▔▔▔▔▔    

const updated = Wibble(..base, wibble: 3)
