language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_record_field_ignored_by_pipe_into_constructor.snap
---
source: language-server/src/tests/reference.rs
expression: "\ntype Wibble {\n  Wibble(name: Int, age: Int)\n}\n\npub fn main() {\n  1 |> Wibble(age: 2)\n}\n"
---
-- app.gleam

type Wibble {
  Wibble(name: Int, age: Int)
         ↑▔▔▔                
}

pub fn main() {
  1 |> Wibble(age: 2)
}
