language-server/src/tests/snapshots/gleam_language_server__tests__reference__references_for_record_field_ignored_by_record_update_with_record_access_spread.snap
---
source: language-server/src/tests/reference.rs
expression: "\ntype Container {\n  Container(inner: Wibble)\n}\n\ntype Wibble {\n  Wibble(wibble: Int, wobble: Int)\n}\n\npub fn main(c: Container) {\n  Wibble(..c.inner, wibble: 2)\n}\n"
---
-- app.gleam

type Container {
  Container(inner: Wibble)
}

type Wibble {
  Wibble(wibble: Int, wobble: Int)
                      ↑▔▔▔▔▔      
}

pub fn main(c: Container) {
  Wibble(..c.inner, wibble: 2)
}
